Added shopping list component with styles and data

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@fontsource/berkshire-swash": "^5.1.0",
     "@fontsource/koulen": "^5.1.0",
+    "@fontsource/poppins": "^5.1.0",
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
