--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -32,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "react-router-dom": "^6.28.0",
+    "sass": "^1.82.0",
     "vite": "^5.4.1"
   }
 }
