--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
